--- a/templates/index.html
+++ b/templates/index.html
@@ -116,7 +116,7 @@
                     <a href="#propos" class="px-8 py-3 rounded-full shadow-lg bg-gradient-to-r from-[#e75e45] to-[#e78045] text-white font-medium hover:shadow-[#e75e45]/30 hover:shadow-xl transform transition duration-300 hover:-translate-y-1 inline-block">
                         En savoir plus
                     </a>
-                    <a href="/contact" class="px-8 py-3 rounded-full shadow-lg bg-white/10 backdrop-blur-md border border-white/20 text-white hover:bg-white/20 transform transition duration-300 hover:-translate-y-1 inline-block">
+                    <a href="#contact" class="px-8 py-3 rounded-full shadow-lg bg-white/10 backdrop-blur-md border border-white/20 text-white hover:bg-white/20 transform transition duration-300 hover:-translate-y-1 inline-block">
                         Me contacter
                     </a>
                 </div>
