--- a/templates/TC-France.html
+++ b/templates/TC-France.html
@@ -205,7 +205,7 @@
             <h3 class="text-2xl font-semibold text-[#072B61] mb-6 text-center">Présentation du Projet</h3>
             
             <div class="aspect-w-16 aspect-h-9 rounded-xl overflow-hidden shadow-lg mx-auto max-w-4xl relative">
-                <video autoplay muted loop playsinline src="/static/images/TC/tcfrance.mp4" class="w-full h-full object-contain"></video>
+                <img src="/static/images/TC/web.png" class="w-full h-full object-contain"></img>
             </div>
             
             <p class="text-center text-gray-600 mt-4">
