--- a/templates/index.html
+++ b/templates/index.html
@@ -415,7 +415,7 @@ document.addEventListener('DOMContentLoaded', function() {
                         <span class="text-sm md:text-base text-gray-700">Dynamique & <span class="text-[#e75e45]">Relationnelle</span></span>
                     </div>
                 </div>
-                <a href="/contact" class="px-6 py-2 md:px-8 md:py-3 rounded-full shadow-lg btn-primary inline-block text-sm md:text-base">
+                <a href="#contact" class="px-6 py-2 md:px-8 md:py-3 rounded-full shadow-lg btn-primary inline-block text-sm md:text-base">
                     Contactez-moi
                 </a>
             </div>
@@ -723,7 +723,8 @@ document.addEventListener('DOMContentLoaded', function() {
                                 <span class="station-tag future-tag">Développement commercial</span>
                                 <span class="station-tag future-tag">Marketing digital</span>
                                 <span class="station-tag future-tag">Créativité & innovation</span>
-                                <div href="#contact" class="join-btn">REJOINDRE L'AVENTURE</div>
+                                <a href="#contact" class="join-btn">REJOINDRE L'AVENTURE</a>
+
                                 <div class="xp-gain future-xp">+∞ XP</div>
                             </div>
                         </div>
